--- a/22-09-19/22-09-19 task/22-09-19 task.ipynb
+++ b/22-09-19/22-09-19 task/22-09-19 task.ipynb
@@ -117,8 +117,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Task 5:write a python script that takes input from the user and display that input back in upper and lower case"
    ]
@@ -153,20 +155,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bhavyA.COM\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "str1='BHAVYA.COM'\n",
-    "print(str1[:5].lower() + str1[5:])"
+    "a=input()\n",
+    "b=int (input())\n",
+    "print(a[:b].lower()+a[:b])"
    ]
   },
   {
