--- a/23-09-19/23-09-19 task/23-09-19 task.ipynb
+++ b/23-09-19/23-09-19 task/23-09-19 task.ipynb
@@ -8,6 +8,11 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -28,9 +33,11 @@
     }
    ],
    "source": [
-    "a='r'\n",
-    "b='esta$t'\n",
-    "print(a+b)\n"
+    "r=\"restart\"\n",
+    "a=\"r\"\n",
+    "b=\"estart\"\n",
+    "y=b.replace('r','$',1)\n",
+    "print(a+\"\"+y)"
    ]
   },
   {
