--- a/22-09-19/22-09-19 task/22-09-19 task.ipynb
+++ b/22-09-19/22-09-19 task/22-09-19 task.ipynb
@@ -155,9 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bhagsKJDHDHJ\n",
+      "3\n",
+      "bhabha\n"
+     ]
+    }
+   ],
    "source": [
     "a=input()\n",
     "b=int (input())\n",
