--- a/24-09-19/24-09-19 class file.ipynb
+++ b/24-09-19/24-09-19 class file.ipynb
@@ -1,6 +1,292 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## reusability\n",
+    "## easy to debug\n",
+    "## function defination\n",
+    "## function calling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "40\n",
+      "70\n"
+     ]
+    }
+   ],
+   "source": [
+    "def addition():\n",
+    "    a=int(input())\n",
+    "    b=int(input())\n",
+    "    print(a+b)\n",
+    "addition()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "30\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "def addition(a,b):\n",
+    "    c=a+b\n",
+    "    print(c)\n",
+    "    \n",
+    "a=input()\n",
+    "b=input()\n",
+    "addition(int(a),int(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20, 30, 50)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add(a,b):        \n",
+    "    c=a+b\n",
+    "    return (a,b,c)\n",
+    "add(20,30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add(a,b):       #in function only return one value\n",
+    "    c=a+b\n",
+    "    return a\n",
+    "    return b\n",
+    "    return c\n",
+    "add(20,30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "even\n"
+     ]
+    }
+   ],
+   "source": [
+    "def evenorodd(a):\n",
+    "    if a%2==0:\n",
+    "        print(\"even\")\n",
+    "    else:\n",
+    "        print(\"odd\")\n",
+    "a=int(input())\n",
+    "evenorodd(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "6\n",
+      "10\n",
+      "15\n",
+      "21\n",
+      "28\n",
+      "36\n",
+      "45\n",
+      "55\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sum of n natural numbers\n",
+    "def sum(n):\n",
+    "    s=0\n",
+    "    for i in range(1,n+1):\n",
+    "        s=s+i\n",
+    "        print(s)\n",
+    "    print(s)\n",
+    "sum(10)\n",
+    "           "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# given number is prime or not\n",
+    "def prime(a):\n",
+    "    for i in range(2,n):\n",
+    "        if(a%i==0):\n",
+    "            print(\"prime\")\n",
+    "        else:\n",
+    "            print(\"not prime\")\n",
+    "a=int(input())\n",
+    "print(a)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-29-76042b4fbafe>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-29-76042b4fbafe>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    print(\"factors of s\"):\u001b[0m\n\u001b[1;37m                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# factors of given number\n",
+    "def factors(a):\n",
+    "    print(\"factors of \"):\n",
+    "        for i in range(1,a+1):\n",
+    "        if (a%i==0):\n",
+    "            print(i)\n",
+    "n=int(input())\n",
+    "print(a)            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n",
+      "leap year\n"
+     ]
+    }
+   ],
+   "source": [
+    "# given year is leap year or not\n",
+    "def leapyear(a):\n",
+    "    if(a%100==0):\n",
+    "        if(a%400==0):\n",
+    "            print(\"leap year\")\n",
+    "        else:\n",
+    "            print(\"not a leap year\")\n",
+    "a=int(input())\n",
+    "leapyear(a)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-38-f0d380c79ace>, line 13)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-38-f0d380c79ace>\"\u001b[1;36m, line \u001b[1;32m13\u001b[0m\n\u001b[1;33m    else\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "#whether the number is armstrong or not\n",
+    "def armstrong(a):\n",
+    "    n=int(intput())\n",
+    "    sum=0\n",
+    "    temp\n",
+    "    for i in range(1,n):\n",
+    "        if num==sum:\n",
+    "            print(\"armstrong\")\n",
+    "             else\n",
+    "            print(\"not armstrong\")\n",
+    "            "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
