--- a/24-09-19/24-09-19 class file.ipynb
+++ b/24-09-19/24-09-19 class file.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -189,51 +189,58 @@
      "output_type": "stream",
      "text": [
       "3\n",
-      "3\n"
+      "prime\n"
      ]
     }
    ],
    "source": [
     "# given number is prime or not\n",
-    "def prime(a):\n",
-    "    for i in range(2,n):\n",
-    "        if(a%i==0):\n",
-    "            print(\"prime\")\n",
-    "        else:\n",
-    "            print(\"not prime\")\n",
-    "a=int(input())\n",
-    "print(a)\n",
+    "def prime(n):\n",
+    "    fact=1\n",
+    "    for i in range(1,n):\n",
+    "            if(n%i==0):\n",
+    "                fact=fact+1\n",
+    "    if(fact==2):\n",
+    "        print(\"prime\")\n",
+    "    else:\n",
+    "        print(\"not prime\")\n",
+    "n=int(input())\n",
+    "prime(n)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-29-76042b4fbafe>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-29-76042b4fbafe>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    print(\"factors of s\"):\u001b[0m\n\u001b[1;37m                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "factors of n\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "6\n"
      ]
     }
    ],
    "source": [
     "# factors of given number\n",
-    "def factors(a):\n",
-    "    print(\"factors of \"):\n",
-    "        for i in range(1,a+1):\n",
-    "        if (a%i==0):\n",
+    "def factor(n):\n",
+    "    print(\"factors of n\")\n",
+    "    for i in range(1,n+1):\n",
+    "        if (n%i==0):\n",
     "            print(i)\n",
     "n=int(input())\n",
-    "print(a)            "
+    "factor(n)            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -260,30 +267,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-38-f0d380c79ace>, line 13)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-38-f0d380c79ace>\"\u001b[1;36m, line \u001b[1;32m13\u001b[0m\n\u001b[1;33m    else\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "153\n",
+      "armstrong\n"
      ]
     }
    ],
    "source": [
-    "#whether the number is armstrong or not\n",
+    "# whether the number is armstrong or not\n",
     "def armstrong(a):\n",
-    "    n=int(intput())\n",
     "    sum=0\n",
-    "    temp\n",
-    "    for i in range(1,n):\n",
-    "        if num==sum:\n",
-    "            print(\"armstrong\")\n",
-    "             else\n",
-    "            print(\"not armstrong\")\n",
+    "    temp=a\n",
+    "    while temp>0:\n",
+    "        n=temp%10\n",
+    "        sum+=n**3\n",
+    "        temp//=10\n",
+    "    if a==sum:\n",
+    "        print(\"armstrong\")\n",
+    "    else:\n",
+    "        print(\"not armstrong\")\n",
+    "a=int(input())\n",
+    "armstrong(a)\n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# average of first n natural numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def avg(n):\n",
+    "    sum=0\n",
+    "    count=1\n",
+    "    for i in range(1,n+1):\n",
+    "        sum=sum+1\n",
+    "        count=count+1\n",
+    "    print(sum//count)\n",
+    "n=int(input())\n",
+    "avg(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# factorial of number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fact(n):\n",
+    "    fact=1\n",
+    "    for i in range(1,n+1):\n",
+    "        fact=fact+1\n",
+    "    print(fact)\n",
+    "n=int(input())\n",
+    "fact(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# perfect numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "not perfect\n"
+     ]
+    }
+   ],
+   "source": [
+    "def perfect(n):\n",
+    "    sum=0\n",
+    "    for i in range(1,n):\n",
+    "        if(n%i==0):\n",
+    "            sum=sum+1\n",
+    "            print(sum)\n",
+    "    if(sum==n):\n",
+    "        print(\"perfect\")\n",
+    "    else:\n",
+    "        print(\"not perfect\")\n",
+    "n=int(input())\n",
+    "perfect(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# product of n natural numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "6\n",
+      "24\n",
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def product(n):\n",
+    "    s=1\n",
+    "    for i in range(1,n+1):\n",
+    "        s=s*i\n",
+    "        print(s)\n",
+    "        prin\n",
+    "product(5)"
    ]
   },
   {
@@ -299,18 +449,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
