--- a/24-09-19/24-09-19 class file.ipynb
+++ b/24-09-19/24-09-19 class file.ipynb
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,19 @@
       "2\n",
       "6\n",
       "24\n",
-      "120\n"
+      "120\n",
+      "720\n",
+      "5040\n",
+      "40320\n",
+      "362880\n",
+      "3628800\n",
+      "39916800\n",
+      "479001600\n",
+      "6227020800\n",
+      "87178291200\n",
+      "1307674368000\n",
+      "20922789888000\n",
+      "355687428096000\n"
      ]
     }
    ],
@@ -432,8 +444,7 @@
     "    for i in range(1,n+1):\n",
     "        s=s*i\n",
     "        print(s)\n",
-    "        prin\n",
-    "product(5)"
+    "product(17)"
    ]
   },
   {
@@ -449,6 +460,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
