--- a/25-09-19/class file/25-09-19 class file.ipynb
+++ b/25-09-19/class file/25-09-19 class file.ipynb
@@ -71,15 +71,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-4-0425593816d1>, line 8)",
+     "evalue": "expected an indented block (<ipython-input-1-11fb38ba8c93>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-0425593816d1>\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    lb=int(input())\u001b[0m\n\u001b[1;37m                   ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-11fb38ba8c93>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    if lb%2==0:\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -88,12 +88,13 @@
     "def even(lb):\n",
     "    count=0\n",
     "    for i in range(1,lb+1):\n",
-    "        if lb%2==0:\n",
+    "    if lb%2==0:\n",
     "            count=count+1\n",
     "    if count==2:\n",
     "        print(\"even)\n",
     "lb=int(input())\n",
     "even(lb)\n",
+    "              \n",
     "\n",
     "\n",
     "        \n",
